# HeborisCE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  changelog.txt  heboris.ini  heboris.txt  readme-c.txt  vcpkg.json  Ä└ìsâtâ@âCâïüEDLLé╔é┬éóé─.txt  é═é╢é▀é╔é¿ô╟é▌ë║é│éó.txt
.github/workflows/: cmake-multi-platform.yml
cmake/: AddLibrariesFindPackage.cmake  AddLibrariesVendor.cmake  CPackDragNDropCodesignDMGs.cmake  CodeSignDylibs.sh  InstallRuntimeDependenciesMacOS.cmake  InstallRuntimeDependenciesMinGW.cmake  entry.desktop.cmake
cmake/emscripten/: Configure.cmake  index.html
cmake/lib/: AddLibrariesVendor.cmake
cmake/macos/: Configure.cmake
cmake/unix/: AddLibrariesPkgConfig.cmake  Configure.cmake  InstallRuntimeDependenciesLinux.cmake  InstallRuntimeDependenciesMinGW.cmake
cmake/vita/: Configure.cmake
cmake/windows/: Configure.cmake  InstallRuntimeDependenciesMSVC.cmake
config/stage/: stage28.sav  stage29.sav  stage30.sav  stage31.sav  stage32.sav  stage33.sav  stage34.sav  stage35.sav  stage36.sav  stage37.sav  stage38.sav  stage39.sav  stage40.sav  stage41.sav  stage42.sav  stage43.sav  stage44.sav  stage45.sav
doc/: addons.txt  for_english_users.txt  grade.txt  heboblk.pxa  list.txt  mission.txt  setting.txt  todo_buglist.txt  versus.txt
pkg/: HeborisC7EX-SDL2.xcf
pkg/appimage/: pkg-in-docker.sh  pkg.sh
pkg/linux/: HeborisC7EX-SDL2-flatpak.yml  HeborisC7EX-SDL2.desktop  HeborisC7EX-SDL2.desktop.in  HeborisCE.desktop  entry.desktop.in  get-gamecontrollerdb.sh  pkg-appimage.sh  pkg-flatpak.sh  pkg-flatpak.yml  pkg-in-docker.sh
pkg/macos/: HeborisC7EX-SDL2.icns  HeborisCE.icns  MacOSXBundleInfo.plist.in  pkg-installable-macos.sh  pkg-macos.sh  pkg-portable-macos.sh  pkg.sh
pkg/script/: gen_res_dat.py
pkg/unix/: PlayHeborisC7EX-SDL2.in
pkg/vita/: pkg.sh
pkg/windows/: HeborisCE.rc  Icon.rc  InstallRuntimeDependencies.cmake  InstallRuntimeDependenciesMinGW.cmake  pkg.bat
res/bg/: bg.txt
res/bgm/: bgm.txt
res/font/: font.txt
res/se/: se.txt
sce_sys/livearea/contents/: template.xml
script/: get-gamecontrollerdb.sh
src/Luna/Source/: Luna3D.cpp  LunaBase.h
src/Luna/Source/Class/: VMR9.cpp
src/Lunaì╖ò¬/: ÉVïKâeâLâXâg âhâLâàâüâôâg.txt
src/Lunaì╖ò¬/Source/Class/: Texture.cpp
src/app/: APP.c  APP.h  APP_audio.c  APP_audio.h  APP_audio_private.h  APP_bdf.c  APP_bdf.h  APP_build_config.h.cmake  APP_build_config.h.in  APP_common.h  APP_error.c  APP_error.h  APP_filesystem.c  APP_filesystem.h  APP_global.c  APP_global.h  APP_hashtable.c  APP_hashtable.h  APP_input.c  APP_input.h  APP_main.c  APP_main.h  APP_mp3.c  APP_mp3.h  APP_ogg.c  APP_ogg.h  APP_stdinc.h  APP_stdlib.c  APP_stdlib.h  APP_string.c  APP_string.h  APP_update.c  APP_update.h  APP_video.c  APP_video.h  APP_wav.c  APP_wav.h  APP_worker.c  APP_worker.h  APP_worker_synchronous.c  (+4 more)
src/game/: ars.c  ars.h  button.h  classic.c  classic.h  classic_D.c  classic_D.h  common.h  config.c  config.h  cpu.c  cpu.h  effect.c  effect.h  flexdraw.c  flexdraw.h  gamedef.h  gamestart.c  gamestart.cpp  gamestart.h  grade.c  grade.h  heboris.ini  heboris_ini.h  heboris_user.ini  inireader.c  inireader.cpp  inireader.h  inireader_heboris_ini.inc  init.c  init.h  init.inc  mission.c  mission.h  mission_info.h  plane.h  practice.c  practice.h  prototypes.h  ranking.c  (+31 more)
src/game/doc/: cpu_tbl.txt  planes.txt  scriptlist.txt  seplanes.txt
src/game/include/: ars.h  classic.h  classic_D.h  common.h  config.h  cpu.h  effect.h  flexdraw.h  game.h  grade.h  init.h  mission.h  mission_info.h  practice.h  ranking.h  ranking2.h  ranking3.h  replay.h  sectime.h  setdef.h  sound.h  speed.h  speed_c7t6.5-c7t7.h  speed_old.h  staffroll.h  tomoyo.h  view.h  world.h
src/game/src/: ars.c  classic.c  classic_D.c  config.c  effect.c  flexdraw.c  game.c  grade.c  init.c  mission.c  mission_info.c  practice.c  ranking.c  ranking2.c  ranking3.c  replay.c  sectime.c  setdef.c  sound.c  speed_old.c  staffroll.c  tomoyo.c  view.c  world.c
src/main_dx9/: KBGMPlayer.cpp  KBGMPlayer.h  Kbgm.h  MP3Player.cpp  MP3Player.h  VBMP3.h  bassmod.h  include.h  keyconf.def  main.cpp  main.h  option.def  ygs2kfunc.cpp  ygs2kfunc.h
src/main_sdl/: BDF_font.c  BDF_font.h  HT_hashtable.c  HT_hashtable.h  SDL_kanji.c  SDL_kanji.cpp  SDL_kanji.h  bdf.c  bdf.h  defs.h.in  delay.c  delay.h  filesystem.c  filesystem.h  gamecontroller.c  gamecontroller.h  gamecontroller_vita.c  gamecontrollerdb.c  gamecontrollerdb_null.c  gamecontrollerdb_vita.c  gl_kanji.cpp  gl_kanji.cpp.old  gl_kanji.h.old  include.h  keyconf.def  keyconf.h  main.c  main.cpp  main.h  nanotime.c  nanotime.h  opengl_utils.cpp  opengl_utils.h  option.def  option.h  paths.h  paths.h.in  physfs_rwops.c  physfs_rwops.h  physfsrwops.h  (+8 more)
src/script/: ars.c  ars.h  changelog.txt  changelog2.txt  classic.c  classic.h  classic_D.c  classic_D.h  config.c  config.c.test  config.h  cpu.c  cpu.h  cpu_tbl.txt  effect.c  effect.h  flexdraw.c  flexdraw.h  gameinit.c  grade.c  grade.h  include.h  mission.c  mission.h  mission_info.c  mission_info.def  mission_info.h  mission_info_utf8.c  planes.txt  practice.c  practice.h  ranking.c  ranking.h  ranking2.c  ranking2.h  ranking3.c  ranking3.h  readdef.c  readdef.h  replay.c  (+17 more)
src/sys/include/: AUDIO.h  ERROR.h  FILESYSTEM.h  INPUT.h  MAIN.h  STD.h  SYS.h  SYS_build_config.h.cmake  VIDEO.h  WORKER.h
src/sys/src/: AUDIO.c  BDF.c  BDF.h  ERROR.c  FILESYSTEM.c  GLOBAL.c  GLOBAL.h  HASHTABLE.c  HASHTABLE.h  INPUT.c  MAIN.c  VIDEO.c  VITA.c  WORKER_multithreaded.c  WORKER_synchronous.c
src/util/: gen_res_dat.c
